@@ -1,3 +1,9 @@
+2006-10-05 03:03:27  Sean Middleditch <elanthis@awesomeplay.com>
+
+  * Fix the network code to use a vector of bytes instead of a
+    StringBuffer for output buffering, so that we can use embedded
+    NUL bytes again, so that ZMP works.
+
 2006-10-01 07:54:48  Sean Middleditch <elanthis@awesomeplay.com>
 
   * Show the direction of all exits in room lists.
